--- a/.travis.yml
+++ b/.travis.yml
@@ -9,6 +9,7 @@ matrix:
             - ubuntu-toolchain-r-test
           packages:
             - g++-5
+            - scons
       env:
          - MATRIX_EVAL="CC=gcc-5 && CXX=g++-5"
 
@@ -19,6 +20,7 @@ matrix:
             - ubuntu-toolchain-r-test
           packages:
             - g++-6
+            - scons
       env:
         - MATRIX_EVAL="CC=gcc-6 && CXX=g++-6"
 
@@ -29,6 +31,7 @@ matrix:
             - ubuntu-toolchain-r-test
           packages:
             - g++-7
+            - scons
       env:
         - MATRIX_EVAL="CC=gcc-7 && CXX=g++-7"
 
@@ -39,6 +42,7 @@ matrix:
             - ubuntu-toolchain-r-test
           packages:
             - g++-8
+            - scons
       env:
         - MATRIX_EVAL="CC=gcc-8 && CXX=g++-8"
 
@@ -52,6 +56,7 @@ matrix:
           packages:
             - clang-4.0
             - g++-6 # for newer STL
+            - scons
       env:
         - MATRIX_EVAL="CC=clang-4.0 && CXX=clang++-4.0"
 
@@ -65,6 +70,7 @@ matrix:
           packages:
             - clang-5.0
             - g++-6 # for newer STL
+            - scons
       env:
         - MATRIX_EVAL="CC=clang-5.0 && CXX=clang++-5.0"
 
@@ -78,6 +84,7 @@ matrix:
           packages:
             - clang-6.0
             - g++-6 # for newer STL
+            - scons
       env:
         - MATRIX_EVAL="CC=clang-6.0 && CXX=clang++-6.0"
 
